Add timestamp column to ts query